at a temporary state where I can generate words

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "experimentalDecorators": true,
     "module": "esnext",
     "moduleResolution": "node",
-    "importHelpers": true,
+	"importHelpers": true,
+	"resolveJsonModule": true,
     "target": "es2015",
     "typeRoots": [
       "node_modules/@types"
