--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@angular/router": "~8.2.11",
     "@types/node": "~8.9.4",
     "codemirror": "^5.49.2",
-    "rxjs": "~6.4.0",
+    "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
