--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,15 @@
 			  "src/styles.scss"
             ],
             "scripts": [
-			  "node_modules/codemirror/mode/javascript/javascript.js"
+			  "node_modules/codemirror/lib/codemirror.js",
+			  "node_modules/codemirror/mode/javascript/javascript.js",
+			  "node_modules/codemirror/addon/hint/javascript-hint.js",
+			  "node_modules/codemirror/addon/lint/lint.js",
+			  "node_modules/codemirror/addon/lint/javascript-lint.js",
+			  "node_modules/codemirror/addon/edit/closebrackets.js",
+			  "node_modules/codemirror/addon/edit/matchbrackets.js",
+			  "node_modules/codemirror/addon/search/match-highlighter.js",
+			  "node_modules/jshint/src/jshint.js"
 			]
           },
           "configurations": {
