--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~8.2.11",
     "@types/node": "~8.9.4",
     "codemirror": "^5.49.2",
+    "firebase-tools": "^7.6.2",
     "jshint": "^2.10.2",
     "rxjs": "^6.4.0",
     "tslib": "^1.10.0",
