--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "~8.2.11",
     "@angular/compiler": "~8.2.11",
     "@angular/core": "~8.2.11",
+    "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.2.11",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.11",
@@ -23,6 +24,7 @@
     "@angular/router": "~8.2.11",
     "@types/node": "~8.9.4",
     "codemirror": "^5.49.2",
+    "firebase": "^7.2.2",
     "firebase-tools": "^7.6.2",
     "jshint": "^2.10.2",
     "rxjs": "^6.4.0",
